--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-ECHO est  desativado.
+    
+<h1>Projeto Exercicio01</h1>
+     <button onclick="azul()">Azul</button>
+     <button onclick="vermelho()">Vermelho</button>
+
+<h1>Projeto Exercicio02</h1>
+
+    
+
+    <script src="js/script.js"></script>
 </body>
 </html>
